ChatBot to right side

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <ul class="chatbox">
             <li class="chat incoming">
-                <span class="Symbols"><img width="25px" src="Images\bot_image.png" alt=""></span>
+                <span class="Symbols"><img width="25px" src="https://github.com/nsolanke111/ChatBot/blob/main/chatbot%20trial/Images/bot_image.png?raw=true" alt=""></span>
                 <p>Hi! <br>How can Ihelp You...</p>
             </li>
             <li class="chat outgoing">
